--- a/index.ipynb
+++ b/index.ipynb
@@ -84,13 +84,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Wednesday' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-d12f1846c52a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mday_of_the_week\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTuesday\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32melif\u001b[0m \u001b[0mtoday_is\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mday_of_the_week\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWednesday\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'almost the weekend'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Wednesday' is not defined"
+     ]
+    }
+   ],
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "# conditionals go here"
+    "if today_is == 1:\n",
+    "    day_of_the_week = 'Sunday'\n",
+    "elif today_is == 2:\n",
+    "    day_of_the_week = 'Monday'\n",
+    "elif today_is == 3:\n",
+    "    day_of_the_week = 'Tuesday'\n",
+    "elif today_is == 4:\n",
+    "    day_of_the_week = 'Wednesday'\n",
+    "else:\n",
+    "    print('almost the weekend')"
    ]
   },
   {
@@ -143,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
