Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,9 @@
     "is_it_hot = None\n",
     "# conditionals go here\n",
     "if temperature>80:\n",
-    "    print(\"This is nothing! Bring on the heat\")"
+    "    print(\"This is nothing! Bring on the heat\")\n",
+    "else:\n",
+    "    "
    ]
   },
   {
