Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -75,7 +75,7 @@
     "if temperature>80:\n",
     "    print(\"This is nothing! Bring on the heat\")\n",
     "else:\n",
-    "    "
+    "    print(It is so hot out!\"\")"
    ]
   },
   {
