--- a/index.ipynb
+++ b/index.ipynb
@@ -65,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is nothing! Bring on the heat\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
@@ -75,7 +83,7 @@
     "if temperature>80:\n",
     "    print(\"This is nothing! Bring on the heat\")\n",
     "else:\n",
-    "    print(It is so hot out!\"\")"
+    "    print(\"It is so hot out!\")"
    ]
   },
   {
