Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,7 @@
     "sub_string = \"on\"\n",
     "ends_with = None\n",
     "# conditionals go here\n",
-    "If string.endswith()"
+    "If string.endswith() == \"on\""
    ]
   },
   {
