--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,8 @@
     "sub_string = \"on\"\n",
     "ends_with = None\n",
     "# conditionals go here\n",
-    "If string.endswith() == \"on\""
+    "If string.endswith() == \"on\":\n",
+    "    ends_with ="
    ]
   },
   {
