Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,9 @@
     "ends_with = None\n",
     "# conditionals go here\n",
     "If string.endswith() == \"on\":\n",
-    "    ends_with ="
+    "    ends_with = True\n",
+    "else:\n",
+    "    ends_wi"
    ]
   },
   {
