Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -123,9 +123,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-9ce13db06f8e>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-9ce13db06f8e>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    If string.endswith() == \"on\":\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
@@ -134,7 +143,7 @@
     "If string.endswith() == \"on\":\n",
     "    ends_with = True\n",
     "else:\n",
-    "    ends_wi"
+    "    ends_with = False"
    ]
   },
   {
