--- a/index.ipynb
+++ b/index.ipynb
@@ -123,15 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-213cb35a79c0>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-6-e18dd1887ec5>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-213cb35a79c0>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    If string.endswith == \"on\":\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-e18dd1887ec5>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    If string.endswith == sub_string:\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
     "sub_string = \"on\"\n",
     "ends_with = None\n",
     "# conditionals go here\n",
-    "If string.endswith == \"on\":\n",
+    "If string.endswith == sub_string:\n",
     "    ends_with = True\n",
     "else:\n",
     "    ends_with = False"
